--- a/EX-3/package.json
+++ b/EX-3/package.json
@@ -4,7 +4,9 @@
   "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "node ./main_init.js",
+    "load": "node ./main_load.js"
   },
   "keywords": [],
   "author": "",
